CSS/style.css
*{
    box-sizing: border-box;
    font-family: raleway, sans-serif;
}

body {
    width: 100%;
    margin: 0px;
    padding: 0px;
    display: flex;
    justify-content: center;
    background-color: #FFFFFF;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    margin: 0px;
    padding: 0px;
}

a {
    text-decoration: none;
    color: inherit;
}

i {
    color: #0065FC;
}

.neutral-color {
    color: #F2F2F2;
}

/* Style du header */

header {
    height: 79px;
    width: 100%;
    display: flex;
}

.logo {
    width: 161px;
    height: 79px;
    padding: 30px 50px 30px 50px;
}

.logo img {
    width: 61.09px;
    height: 19px;
}

.menu {
    width: 344px;
    height: 35px;
    margin-left: auto;
    padding: 0px 50px 0px 50px;
    display: flex;
    justify-content: space-between;
}
   
.hebergement {
    width: 46.31147540983607%;
    height: 35px;
}

.activites {
    width: 25.81967213114754%;
    height: 35px;
}

.menu a {
    display: block;
    margin-top: 16px;
    text-align: center;
}

.hebergement:hover, .activites:hover {
    border-top: 2px #0065FC solid;
    color: #0065FC;
}

/* Style-contenu-général ou body */

main {
    width: 100%;
    padding: 0 50px;
}

/* 1. Style info-groupe */

.InfoGroup {
    width: 100%;
    height: 281px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 35px;
}

.headline {
    width: 100%;
    height: 53px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

h1 {
    display: block;
    margin: 0px;
    padding: 0px;
    font-weight: 700;
    font-size: 22px;
    line-height: 25.83px;
}

.headline p {
    display: block;
    margin: 0px;
    padding: 0px;
    font-weight: 400;
    font-size: 16px;
    line-height: 18.78px;
}

.search-bar {
    width: 377px;
    height: 49px;
    display: flex;
    border-radius: 15px;
    border: 1px #F2F2F2 solid;
}

.texte-recherche {
    display: flex;
    width: 327px;
    height: 49px;
}

.champ-saisie-recherche {
    border: none;
    width: 195px;
    height: 40px;
    margin: auto 0px;
    text-align: center;
    font-size: 18px;
    font-weight: 700;
    line-height: 21.13px;
}

.champ-saisie-recherche::placeholder {
    color: #000000;
    opacity: 1;
  }

.champ-saisie-recherche:focus {
    outline: none;
}

.icone-adrresse {
    width: 50px;
    height: 49px;
    border-radius: 15px 0px 0px 15px;
    border: 1px #F2F2F2 solid;
    background-color: #D9D9D9;
    flex-shrink: 0;
}

.icone-adrresse i {
    width: 14px;
    height: 18px;
    position: relative;
    top: 15px;
    left: 18px;
}

.texte-recherche p {
    margin: 0px;
    font-weight: 700;
    font-size: 18px;
    line-height: 21.13px;
    text-align: center;
}

.btn-recherche {
    cursor: pointer;
    width: 132px;
    height: 49px;
    border-radius: 0px 15px 15px 0px;
    border: 1px #0065FC solid;
    padding: 15px 16px 15px 16px;
    background-color: #0065FC;
    color: #f2f2f2;
    font-weight: 700;
    font-size: 18px;
    line-height: 21.13px;
}

.btn-recherche-2 {
    display: none;
}

.filterbar {
    width: 758px;
    height: 50px;
    margin: 0px;
    padding: 0px;
    display: flex;
    justify-content: space-between;
    list-style-type: none;
}

.filtres {
    width: 7.12401055408971%;
    height: 21px;
    margin: auto 0px;
    font-weight: 700;
    font-size: 18px;
    line-height: 21.13px;
}

.filter {
    height: 50px;
    border-radius: 25px;
    border: 2px #D9D9D9 solid;
    padding: 4px 19px 4px 19px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.filter:hover {
    background-color: #DEEBFF;
}

.economique {
    width: 173px;
}

.familial {
    width: 134px;
}

.romantique {
    width: 170px;
}

.nos-pepites {
    width: 167px;
}

.filter i {
    width: 22px;
    height: 22px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.filter p {
    font-weight: 700;
    font-size: 17px;
    line-height: 19.96px;
}

.infobar {
    height: 24px;
    width: 100%;
    display: flex;
}

.infobar p {
    display: block;
    margin-top: 2.5px;
    font-weight: 400;
    font-size: 16px;
    line-height: 18.78px;
}

.cercle-icone-i {
    width: 24px;
    height: 24px;
    margin-right: 10px;
    border: 1px #D9D9D9 solid;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* STYLE SECTION GROUPE DES OFFRES */

.SectionGroup {
    height: 614px;
    width: 100%;
    margin-bottom: 40px;
    display: flex;
    justify-content: space-between;
}

/* I. Style presentation des offres pour l'hébergement à marseille */

.offers-main {
    height: 100%;
    width: 65%;
    background-color: #F2F2F2;
    border-radius: 15px;
    padding: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

/* 1. Gestion du texte des cartes des offres */

.offers-main h2{
    cursor: pointer;
    margin: 0px;
    font-weight: 700;
    font-size: 22px;
    line-height: 25.83px;
}

.card-main-txt h3 {
    margin: 0px;
    font-weight: 700;
    font-size: 16px;
    line-height: 18.78px;
}

.card-main-txt p {
    margin: 0px;
    font-weight: 400;
    font-size: 14px;
    line-height: 16.44px;
}

.card-main-txt p span {
    font-weight: 600;
}

/* 2.Gestion de la première et deuxième rangée des cartes des offres */

.box-offers-main {
    width: 100%;
    height: 207.25px;
    display: flex;
    justify-content: space-between;
}

.card-main {
    width: 30.86683107274969%;
    height: 207.25px;
    border-radius: 20px;
    padding: 0px 0px 15px 0px;
    background-color: #FFFFFF;
    box-shadow: 0px 3px 15px rgba(0,0,0,0.1);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.card-main img{
    width: 100%;
    height: 124px;
    border-radius: 20px 20px 0px 0px;
    border: 5px #FFFFFF solid;
}
/* ... */

